--- a/style.css
+++ b/style.css
@@ -7,38 +7,24 @@ header{
    z-index: 100;
   }
 
+  body{
+     margin-left: 45px;
+     margin-right: 45px;
+  }
   
   a.hover_black:hover { 
    color: #74b9ff !important;
 } 
 
-#back-to-top {
-     opacity: 0.5;
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  /*right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-}
 
 #scrollUp
 {
-padding: 9px 11px 11px 10px;
-right: 50px;
+right: 70px;
 position: fixed;
-bottom : 100px;
-opacity: 0.3;
-width: 80px;
-height: 80px;
+bottom : 90px;
+opacity: 0.6;
 transition-property: all;
-transition-duration: 0.7s;
+transition-duration: 0.9s;
 transition-timing-function: ease;
 transition-delay: 0s;
 
